[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/fonts/KiriFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Login.gd" type="Script" id=2]
[ext_resource path="res://Assets/fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 1 )

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.0196078, 0.196078, 0.0196078, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 160.0
margin_top = 64.0
margin_right = 880.0
margin_bottom = 224.0
custom_colors/font_color = Color( 0.156863, 0.705882, 0.27451, 1 )
custom_colors/font_outline_modulate = Color( 0.784314, 0.0784314, 0.0784314, 1 )
custom_fonts/font = SubResource( 1 )
text = "Contraland!"
align = 1

[node name="ConfirmGroup" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="UserNameC" type="LineEdit" parent="ConfirmGroup"]
margin_left = 448.0
margin_top = 320.0
margin_right = 608.0
margin_bottom = 344.0

[node name="Label" type="Label" parent="ConfirmGroup/UserNameC"]
margin_left = -96.0
margin_right = -22.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 6 )
text = "Username :"

[node name="PasswordC" type="LineEdit" parent="ConfirmGroup"]
margin_left = 448.0
margin_top = 352.0
margin_right = 608.0
margin_bottom = 376.0
secret = true

[node name="Label" type="Label" parent="ConfirmGroup/PasswordC"]
margin_left = -96.0
margin_right = -56.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 7 )
text = "Password :"

[node name="PwConfirm" type="LineEdit" parent="ConfirmGroup"]
margin_left = 448.0
margin_top = 384.0
margin_right = 608.0
margin_bottom = 408.0
secret = true

[node name="Label" type="Label" parent="ConfirmGroup/PwConfirm"]
margin_left = -96.0
margin_right = -56.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 8 )
text = "Repeat PW :"

[node name="Confirm" type="Button" parent="ConfirmGroup"]
margin_left = 384.0
margin_top = 448.0
margin_right = 480.0
margin_bottom = 480.0
custom_fonts/font = SubResource( 2 )
text = "Confirm"

[node name="Cancel" type="Button" parent="ConfirmGroup"]
margin_left = 544.0
margin_top = 448.0
margin_right = 640.0
margin_bottom = 480.0
custom_fonts/font = SubResource( 9 )
text = "Cancel"

[node name="Buttons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="SignIn" type="Button" parent="Buttons"]
margin_left = 384.0
margin_top = 384.0
margin_right = 480.0
margin_bottom = 416.0
custom_fonts/font = SubResource( 3 )
text = "Sign in"

[node name="Register" type="Button" parent="Buttons"]
margin_left = 544.0
margin_top = 384.0
margin_right = 648.0
margin_bottom = 416.0
custom_fonts/font = SubResource( 4 )
text = "Register"

[node name="LoginForm" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="UserName" type="LineEdit" parent="LoginForm"]
margin_left = 448.0
margin_top = 320.0
margin_right = 608.0
margin_bottom = 344.0

[node name="Label2" type="Label" parent="LoginForm/UserName"]
margin_left = -96.0
margin_right = -13.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 6 )
text = "Username :"

[node name="Password" type="LineEdit" parent="LoginForm"]
margin_left = 448.0
margin_top = 352.0
margin_right = 608.0
margin_bottom = 376.0
secret = true

[node name="Label2" type="Label" parent="LoginForm/Password"]
margin_left = -96.0
margin_right = -19.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 7 )
text = "Password :"

[node name="LoginB" type="Button" parent="LoginForm"]
margin_left = 384.0
margin_top = 416.0
margin_right = 480.0
margin_bottom = 448.0
custom_fonts/font = SubResource( 5 )
text = "Log in"

[node name="CancelB" type="Button" parent="LoginForm"]
margin_left = 544.0
margin_top = 416.0
margin_right = 640.0
margin_bottom = 448.0
custom_fonts/font = SubResource( 10 )
text = "Cancel"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Popup" type="AcceptDialog" parent="."]
margin_left = 352.0
margin_top = 256.0
margin_right = 672.0
margin_bottom = 320.0
window_title = "Alerte !"

[connection signal="pressed" from="ConfirmGroup/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="ConfirmGroup/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="Buttons/SignIn" to="." method="_on_SignIn_pressed"]
[connection signal="pressed" from="Buttons/Register" to="." method="_on_Register_pressed"]
[connection signal="pressed" from="LoginForm/LoginB" to="." method="_on_LoginB_pressed"]
[connection signal="pressed" from="LoginForm/CancelB" to="." method="_on_CancelB_pressed"]
